[package]
name = "rs-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
nrf52832-hal = { version = "0.18.0", features = ["rt", "xxAA-package"] }
panic-halt = "0.2.0"
rtt-target = "0.5.0"
